@@ -1,6 +1,9 @@
 package net.minecraft.server;
 
+import com.legacyminecraft.poseidon.entity.SlimeStateBehaviour;
+
 public class EntitySlime extends EntityLiving implements IMonster {
+    private static final SlimeStateBehaviour SLIME_STATE_BEHAVIOUR = SlimeStateBehaviour.getInstance();
 
     public float a;
     public float b;
@@ -9,22 +12,23 @@ public class EntitySlime extends EntityLiving implements IMonster {
     public EntitySlime(World world) {
         super(world);
         this.texture = "/mob/slime.png";
-        int i = 1 << this.random.nextInt(3);
+        int i = SLIME_STATE_BEHAVIOUR.createInitialPhysicalSize(this.random);
 
         this.height = 0.0F;
-        this.size = this.random.nextInt(20) + 10;
+        this.size = SLIME_STATE_BEHAVIOUR.createInitialJumpDelay(this.random);
         this.setSize(i);
     }
 
     protected void b() {
         super.b();
-        this.datawatcher.a(16, new Byte((byte) 1));
+        this.datawatcher.a(16, Byte.valueOf(SLIME_STATE_BEHAVIOUR.createInitialWatcherSize()));
     }
 
     public void setSize(int i) {
-        this.datawatcher.watch(16, new Byte((byte) i));
-        this.b(0.6F * (float) i, 0.6F * (float) i);
-        this.health = i * i;
+        SlimeStateBehaviour.SetSizeState setSizeState = SLIME_STATE_BEHAVIOUR.computeSetSizeState(i);
+        this.datawatcher.watch(16, Byte.valueOf((byte) i));
+        this.b(setSizeState.scaledWidth, setSizeState.scaledWidth);
+        this.health = setSizeState.scaledHealth;
         this.setPosition(this.locX, this.locY, this.locZ);
     }
 
@@ -47,26 +51,7 @@ public class EntitySlime extends EntityLiving implements IMonster {
         boolean flag = this.onGround;
 
         super.m_();
-        if (this.onGround && !flag) {
-            int i = this.getSize();
-
-            for (int j = 0; j < i * 8; ++j) {
-                float f = this.random.nextFloat() * 3.1415927F * 2.0F;
-                float f1 = this.random.nextFloat() * 0.5F + 0.5F;
-                float f2 = MathHelper.sin(f) * (float) i * 0.5F * f1;
-                float f3 = MathHelper.cos(f) * (float) i * 0.5F * f1;
-
-                this.world.a("slime", this.locX + (double) f2, this.boundingBox.b, this.locZ + (double) f3, 0.0D, 0.0D, 0.0D);
-            }
-
-            if (i > 2) {
-                this.world.makeSound(this, "mob.slime", this.k(), ((this.random.nextFloat() - this.random.nextFloat()) * 0.2F + 1.0F) / 0.8F);
-            }
-
-            this.a = -0.5F;
-        }
-
-        this.a *= 0.6F;
+        this.a = SLIME_STATE_BEHAVIOUR.tickLandingSquish(this, this.a, flag, this.onGround, this.getSize(), this.random);
     }
 
     protected void c_() {
@@ -100,50 +85,32 @@ public class EntitySlime extends EntityLiving implements IMonster {
     }
 
     public void die() {
-        int i = this.getSize();
-
-        if (!this.world.isStatic && i > 1 && this.health <= 0) {
-            for (int j = 0; j < 4; ++j) {
-                float f = ((float) (j % 2) - 0.5F) * (float) i / 4.0F;
-                float f1 = ((float) (j / 2) - 0.5F) * (float) i / 4.0F;
-                EntitySlime entityslime = new EntitySlime(this.world);
-
-                entityslime.setSize(i / 2);
-                entityslime.setPositionRotation(this.locX + (double) f, this.locY + 0.5D, this.locZ + (double) f1, this.random.nextFloat() * 360.0F, 0.0F);
-                this.world.addEntity(entityslime);
-            }
-        }
-
+        SLIME_STATE_BEHAVIOUR.splitOnDeath(this, this.getSize(), this.health, this.world.isStatic, this.random);
         super.die();
     }
 
     public void b(EntityHuman entityhuman) {
-        int i = this.getSize();
-
-        if (i > 1 && this.e(entityhuman) && (double) this.f(entityhuman) < 0.6D * (double) i && entityhuman.damageEntity(this, i)) {
-            this.world.makeSound(this, "mob.slimeattack", 1.0F, (this.random.nextFloat() - this.random.nextFloat()) * 0.2F + 1.0F);
-        }
+        SLIME_STATE_BEHAVIOUR.attackPlayerOnContact(this, entityhuman, this.getSize(), this.random);
     }
 
     protected String h() {
-        return "mob.slime";
+        return SLIME_STATE_BEHAVIOUR.getHurtSound();
     }
 
     protected String i() {
-        return "mob.slime";
+        return SLIME_STATE_BEHAVIOUR.getDeathSound();
     }
 
     protected int j() {
-        return this.getSize() == 1 ? Item.SLIME_BALL.id : 0;
+        return SLIME_STATE_BEHAVIOUR.getDropItemId(this.getSize());
     }
 
     public boolean d() {
         Chunk chunk = this.world.getChunkAtWorldCoords(MathHelper.floor(this.locX), MathHelper.floor(this.locZ));
-
-        return (this.getSize() == 1 || this.world.spawnMonsters > 0) && this.random.nextInt(10) == 0 && chunk.a(987234911L).nextInt(10) == 0 && this.locY < 16.0D;
+        return SLIME_STATE_BEHAVIOUR.canSpawn(chunk, this.getSize(), this.world.spawnMonsters, this.random.nextInt(10), this.locY);
     }
 
     protected float k() {
-        return 0.6F;
+        return SLIME_STATE_BEHAVIOUR.getSoundVolume();
     }
 }
